--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Github WorkFlow
+name: Github WorkFlow with Cloudflare Tunnel
 
 on:
   workflow_dispatch:
@@ -21,18 +21,20 @@ jobs:
           sudo sed -i 's/^#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
           sudo systemctl restart ssh
 
-      - name: Start Ngrok Tunnel for SSH
+      - name: Install Cloudflare Tunnel
         run: |
-          curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
-          echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
-          sudo apt update && sudo apt install ngrok -y
+          curl -fsSL https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-linux-amd64 -o cloudflared
+          chmod +x cloudflared
+          sudo mv cloudflared /usr/local/bin/
 
-          # Start Ngrok tunnel for SSH
-          ngrok config add-authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
-          nohup ngrok tcp 22 --log=stdout > ngrok.log &
+      - name: Set Up Cloudflare Tunnel Config
+        run: |
+          mkdir -p ~/.cloudflared
+          echo '${{ secrets.CLOUDFLARE_TUNNEL_JSON }}' > ~/.cloudflared/my-tunnel.json
 
-      - name: Display SSH Connection Info
-        run: sleep 10 && curl -s http://127.0.0.1:4040/api/tunnels | jq -r '.tunnels[0].public_url'
+      - name: Start Cloudflare Tunnel (Expose All Ports)
+        run: |
+          nohup cloudflared tunnel --config .github/workflows/cloudflare-tunnel.yml run my-tunnel &
 
       - name: Keep Runner Alive
         run: sleep infinity
