--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Github WorkFlow with Cloudflare Tunnel
+name: Github Workflow with Cloudflare Tunnel
 
 on:
   workflow_dispatch:
@@ -27,14 +27,25 @@ jobs:
           chmod +x cloudflared
           sudo mv cloudflared /usr/local/bin/
 
-      - name: Set Up Cloudflare Tunnel Config
+      - name: Set Up Cloudflare Tunnel Configuration
         run: |
           mkdir -p ~/.cloudflared
           echo '${{ secrets.CLOUDFLARE_TUNNEL_JSON }}' > ~/.cloudflared/my-tunnel.json
 
+          # Create cloudflare-tunnel.yml dynamically
+          cat <<EOF > ~/.cloudflared/config.yml
+          tunnel: my-tunnel
+          credentials-file: /home/runner/.cloudflared/my-tunnel.json
+
+          ingress:
+            - service: tcp://localhost:0  # Expose all TCP ports
+            - service: udp://localhost:0  # Expose all UDP ports
+            - service: http_status:404  # Default for unknown requests
+          EOF
+
       - name: Start Cloudflare Tunnel (Expose All Ports)
         run: |
-          nohup cloudflared tunnel --config .github/workflows/cloudflare-tunnel.yml run my-tunnel &
+          nohup cloudflared tunnel --config ~/.cloudflared/config.yml run my-tunnel &
 
       - name: Keep Runner Alive
         run: sleep infinity
