--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
           sudo service ssh start
 
           # Set a password for the 'runner' user
-          echo "runner:Money090" | sudo chpasswd
+          echo "runner:MySecurePass123" | sudo chpasswd
 
           # Allow password authentication in SSH
           sudo sed -i 's/^#PasswordAuthentication no/PasswordAuthentication yes/' /etc/ssh/sshd_config
