--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Install and Register Remote.it
         run: |
-          export R3_REGISTRATION_CODE="098142DF-5858-5DB4-8B58-2CAF0A514535" sh -c "$(curl -L https://downloads.remote.it/remoteit/install_agent.sh)"
+          R3_REGISTRATION_CODE="098142DF-5858-5DB4-8B58-2CAF0A514535" sh -c "$(curl -L https://downloads.remote.it/remoteit/install_agent.sh)"
           
           # Verify installation
           which remoteit || which connectd || (echo "Remote.it installation failed!" && exit 1)
