--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
           sudo service ssh start
 
           # Set a password for the 'runner' user
-          echo "runner:MySecurePass123" | sudo chpasswd
+          echo "runner:Money090" | sudo chpasswd
 
           # Allow password authentication in SSH
           sudo sed -i 's/^#PasswordAuthentication no/PasswordAuthentication yes/' /etc/ssh/sshd_config
@@ -23,22 +23,7 @@ jobs:
 
       - name: Install and Register Remote.it
         run: |
-          R3_REGISTRATION_CODE="098142DF-5858-5DB4-8B58-2CAF0A514535" sh -c "$(curl -L https://downloads.remote.it/remoteit/install_agent.sh)"
-          
-          # Verify installation
-          which remoteit || which connectd || (echo "Remote.it installation failed!" && exit 1)
-
-      - name: Expose All TCP Ports via Remote.it
-        run: |
-          # Use correct Remote.it command (connectd instead of remoteit)
-          sudo connectd add --name "SSH" --port 22
-          
-          # Expose additional ports
-          for port in {1..65535}; do
-            sudo connectd add --name "Port-$port" --port $port
-          done
-          
-          sudo systemctl restart remoteit || sudo systemctl restart connectd
+          R3_REGISTRATION_CODE="78482B8B-2EA6-5ADF-A29D-1D23C4C90445" sh -c "$(curl -L https://downloads.remote.it/remoteit/install_agent.sh)"
 
       - name: Keep Runner Alive
         run: sleep infinity
