--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,9 +21,18 @@ jobs:
           sudo sed -i 's/^#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
           sudo systemctl restart ssh
 
-      - name: Install and Register Remote.it
+      - name: Start Ngrok Tunnel for SSH
         run: |
-          R3_REGISTRATION_CODE="78482B8B-2EA6-5ADF-A29D-1D23C4C90445" sh -c "$(curl -L https://downloads.remote.it/remoteit/install_agent.sh)"
+          curl -s https://ngrok-agent.s3.amazonaws.com/ngrok.asc | sudo tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null
+          echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | sudo tee /etc/apt/sources.list.d/ngrok.list
+          sudo apt update && sudo apt install ngrok -y
+
+          # Start Ngrok tunnel for SSH
+          ngrok config add-authtoken ${{ secrets.NGROK_AUTH_TOKEN }}
+          nohup ngrok tcp 22 --log=stdout > ngrok.log &
+
+      - name: Display SSH Connection Info
+        run: sleep 10 && curl -s http://127.0.0.1:4040/api/tunnels | jq -r '.tunnels[0].public_url'
 
       - name: Keep Runner Alive
         run: sleep infinity
